# ec-genai-demo

./: .gitignore  README.md
cdk/: .gitattributes  .gitignore  .projenrc.ts  README.md  cdk-nag-output.txt  cdk.json  package.json
cdk/.projen/: deps.json  files.json  tasks.json
cdk/src/: main.ts  nagSuppressions.ts
cdk/src/constructs/: alb-ecs.ts  cloudfront.ts
cdk/test/: cdk-nag.test.ts  main.test.ts
cdk/test/__snapshots__/: main.test.ts.snap
dify/: LP生成v2-workflow.yml  README.md  商品説明文生成.yml
src/: Dockerfile  app.py  docker-compose.yml  pyproject.toml  top.py
src/.streamlit/: config.toml  pages_sections.toml
src/api/: common.py
src/case-study/: case-description-gen.py  case-img-gen.py  case-search-exp.py
src/component/: common.py
src/description-generator/: .gitignore  app.py  prompt.txt
src/design-generation/: app.py
src/index/: store_food_img.index  store_food_img.json  store_food_txt.index  store_food_txt.json  store_img.index  store_img.json  store_living_img.index  store_living_img.json  store_living_txt.index  store_living_txt.json  store_txt.index  store_txt.json
src/lp-generator/: app.py
src/search-exp/: 01_user_info.py  02_item_register.py  03_item_search.py  app.py
src/store_source/store/: list.csv
src/store_source/store_food/: list.csv
src/store_source/store_living/: list.csv
src/titan-image-inpainter/: app.py
